log/build_2023-10-23_02-11-04/castelet/stderr.log
  File "/home/keny/MANOS_ws/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 41
    self.castelet_ui.test.clicked.connect(self.test.)
                                                    ^
SyntaxError: invalid syntax

